k8s/prod/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flex-rest-api
  namespace: default
  labels:
    environment: production
    app: flex-rest-api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flex-rest-api
  template:
    metadata:
      labels:
        environment: production
        app: flex-rest-api
    spec:
      containers:
        - name: flex-rest-api-container
          image: umeshdani/flex-rest-api:latest
          ports:
            - containerPort: 8080
